our team fix text spacing

--- a/assets/sass/template/_our-team.scss
+++ b/assets/sass/template/_our-team.scss
@@ -12,9 +12,17 @@
 			margin-bottom: 10px;	
 		}
 		
+		.entry-header {
+			margin-bottom: 30px;	
+		}
+		
+		h3, p {
+			color: #999;	
+		}
+		
 		h3 {
 			font-size: 24px;
-			margin-bottom: 5px;	
+			margin-bottom: 0;	
 		}
 		
 	}
